--- a/client/main.css
+++ b/client/main.css
@@ -179,14 +179,13 @@ h1 {
     position: fixed;
     display: hide;
     z-index: 2;
-    opacity: 0.80;
+    background: rgba(0, 0, 0, .8);
     padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
 }
 
 .form-wrapper {
@@ -251,27 +250,26 @@ a:visited {
     position: fixed;
     display: hide;
     z-index: 2;
-    opacity: 0.8;
     padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .instructions {
     font-family: 'Gill Sans', Verdana, Lucida, Geneva, Helvetica, Arial, sans-serif;
     color: black;
-    width: 450px;
+    width: 950px;
     opacity: 1;
     z-index: 3;
     padding: 15px;
     display: block;
     margin: auto;
     height: auto;
-    background-color:white;
+    background-color: #aaa;
     border-color: #aaa;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -281,6 +279,151 @@ a:visited {
     box-shadow: 0 1px 1px rgba(0,0,0,.4) inset, 0 1px 0 rgba(255,255,255,.2);
 }
 
-.step {
-  margin:auto;
+.close {
+    font-family: sans-serif;
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin: auto;
+    margin-left: 12px;
+}
+
+.close:hover, .close:focus {
+    color: orange;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+  /* Slideshow container */
+  .tutorial-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+
+  .png {
+      display: none;
+  }
+
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+  }
+
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  /* Caption text */
+  .bottomdesc {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 0px;
+    position: absolute;
+    bottom: 3px;
+    width: 100%;
+    text-align: center;
+    background: rgba(0,0,0,0.8);
+  }
+
+  /* Step1/Step2/Step3/Step4 */
+  .toplefttext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  /* 1/2/3/4 Bottom */
+  .dot {
+    cursor:pointer;
+    height: 20px;
+    width: 20px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  .active, .dot:hover {
+    background-color: tomato;
+    color: white;
+  }
+
+  /* Fading animation */
+  .fade {
+    -webkit-animation: fade .5s;
+    -moz-animation: fade .5s; /* Firefox < 16 */
+    -ms-animation: fade .5s; /* Internet Explorer */
+    -o-animation: fade .5s; /* Opera < 12.1 */
+    animation: fade .5s;
+  }
+
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+
+.picture {
+  width: 950px;
+  height: 374.45px;
+}
+
+.helpclose { 
+    font-family: sans-serif;
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin: auto;
+    margin-left: 12px;
+}
+
+.helpclose:hover, .helpclose:focus {
+    color: orange;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.controldots {
+  text-align: center;
+}
+
+.errorMod {
+  background-color: red;
+}
+
+.errorMod :hover {
+    border-color: black;
+    color: black;
+    border-width: medium;        
+}
+
+.okMod {
+  background: rgba(0,0,0,0);
 }
