--- a/client/ui/semester.css
+++ b/client/ui/semester.css
@@ -135,17 +135,27 @@ p {
 }
 
 .description {
-    font-size: 12px;
+    font-size: 14px;
+}
+
+.semesters {
+    display: none;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: tomato;
+    background-color: tomato;
+    font-size: 14px;
+    color: white;
 }
 
 .workload {
 
-    font-size: 14px;
+    font-size: 16px;
 
 }
 
 .credit {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .reqtitle {
@@ -155,7 +165,7 @@ p {
 }
 
 .prereq {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .clutitle {
@@ -165,7 +175,7 @@ p {
 }
 
 .preclu {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .titletally {
@@ -190,13 +200,21 @@ p {
 
 }
 
-.semesters {
-    display: none;
+.overloadtally {
+    display: inline-block;
+    font-family: Rubik, sans-serif;
+    font-size: 20px;
     border-style: solid;
-    border-radius: 5px;
-    border-color: tomato;
-    background-color: tomato;
-    font-size: 14px;
-    color: white;
+    border: 1px 1px;
+    border-color: red;
+    border-radius: 2px;
+    padding: 3px;
+    margin: 15px 3px 3px 3px;
+    background: red;
 }
+
+.tally-wrapper {
+     text-align: center;
+ }
+
 
