--- a/client/main.css
+++ b/client/main.css
@@ -317,24 +317,16 @@ a:visited {
     color: white;
     font-weight: bold;
     font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
   }
 
   /* Position the "next button" to the right */
   .next {
     right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
   }
 
   /* Caption text */
   .bottomdesc {
-    color: #f2f2f2;
+    color: white;
     font-size: 15px;
     padding: 8px 0px;
     position: absolute;
@@ -346,7 +338,7 @@ a:visited {
 
   /* Step1/Step2/Step3/Step4 */
   .toplefttext {
-    color: #f2f2f2;
+    color: white;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
@@ -362,12 +354,20 @@ a:visited {
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 0.6s ease;
+    transition: background-color 0.3s ease, height 0.3s ease, width 0.3s ease;
+
   }
 
   .active, .dot:hover {
     background-color: tomato;
     color: white;
+  }
+
+  .active {
+    font-weight: bold;
+    height: 22px;
+    width: 22px;
+    padding: auto;
   }
 
   /* Fading animation */
